--- a/public/index.html
+++ b/public/index.html
@@ -226,6 +226,7 @@
               <label class="col-xs-2 control-label">hostname</label>
               <div class="col-xs-10 form-inline">
                 <input type="text" class="form-control" v-model="target_node.hostname">
+                <button class="btn btn-default btn-sm" v-on:click="do_resolve">解決</button>
               </div>
             </div>
             <div class="form-group">
