--- a/public/index.html
+++ b/public/index.html
@@ -41,46 +41,51 @@
     </div>
 
     <div class="row">
-      <div class="col-xs-4" id="tree"></div>
+      <div class="col-xs-4">
+        <div class="input-group input-group-sm">
+          <input type="text" class="form-control" v-on:change="do_search" v-model="search_name">
+          <span class="input-group-addon" v-on:click="do_search">検索</span>
+          <span class="input-group-addon" v-on:click="do_search_clear">クリア</span>
+        </div><br>
+        <div id="tree"></div>
+      </div>
       <div class="col-xs-8">
-        <collapse-panel class="panel-default" id="target" v-bind:title="current_node.name" v-if="current_node">
+        <collapse-panel class="panel-primary" id="target" v-bind:title="current_node.name" v-if="current_node">
           <span slot="content">
             <div class="panel-body">
               <img v-bind:src="current_node.image_url" width="100" height="100" class="img-thumbnail" v-if="current_node.image_url">
               <button class="btn btn-default btn-xs pull-right" v-on:click="do_update_node">変更</button><br><br>
               <dl class="dl-horizontal">
+<!--                
                 <dt>uuid</dt>
                 <dd>{{current_node.uuid}}</dd>
                 <dt>parent_uuid</dt>
-                <dd>{{current_node_parent_uuid}}</dd>
+                <dd><span v-if="current_tree_node">{{current_tree_node.parent_uuid}}</span></dd>
+-->
                 <dt>type</dt>
                 <dd>{{current_node.type}}</dd>
-                <dt>description</dt>
-                <dd>{{current_node.description}}</dd>
                 <dt>icon</dt>
-                <dd>{{current_node.icon}} <span v-bind:class="'fas ' + current_node.icon"></span></dd>
+                <dd>{{current_node.icon}} <span v-bind:class="current_node.icon"></span></dd>
                 <dt>hostname</dt>
                 <dd>{{current_node.hostname}}</dd>
                 <dt>ipaddress</dt>
                 <dd>{{current_node.ipaddress}}</dd>
+                <dt>macaddress</dt>
+                <dd>{{current_node.macaddress}}</dd>
+                <dt>description</dt>
+                <dd>{{current_node.description}}</dd>
               </dl>
               <label>Endpoints</label>
               <button class="btn btn-default btn-xs pull-right" v-on:click="do_append_endpoint">エンドポイントの追加</button>
               <table class="table table-striped">
                 <thead>
-                  <tr>
-                    <th>#</th>
-                    <th>name</th>
-                    <th>url</th>
-                    <th>削除</th>
-                  </tr>
+                  <tr><th>name</th><th>url</th><th>削除</th></tr>
                 </thead>
                 <tbody>
                   <tr v-for="(endpoint, index) in current_node.endpoints">
-                    <td>{{index + 1}}</td>
                     <td>{{endpoint.name}}</a></td>
-                    <td v-if="endpoint.url.startsWith('http')"><a v-bind:href="endpoint.url" target="_blank">{{endpoint.url}}</a></td>
-                    <td v-else>{{endpoint.url}}</td>
+                    <td v-if="endpoint.url.startsWith('http')"><a v-bind:href="expand_endpoint(current_node, endpoint.url)" target="_blank">{{endpoint.url}}</a></td>
+                    <td v-else>endpoint.url</td>
                     <td><button class="btn btn-default btn-xs" v-on:click="do_remove_endpoint(index)">削除</button></td>
                   </tr>
                 </tbody>
@@ -93,24 +98,32 @@
           </span>
         </collapse-panel>
 
-        <button class="btn btn-default pull-right" v-on:click="do_append_node">ノードの追加</button><br>
-        <label>Nodes</label>
-        <table class="table table-striped">
-          <thead>
-            <tr>
-              <th>#</th>
-              <th>name</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr v-for="(node, index) in current_node_nodes">
-              <td>{{index + 1}}</td>
-              <td><a v-on:click="select_node(node)">{{node.text}}</a></td>
-            </tr>
-          </tbody>
-        </table>
+        <div v-if="current_tree_node">
+          <button class="btn btn-default pull-right" v-on:click="do_append_node">ノードの追加</button><br>
+          <label>Nodes</label>
+          <table class="table table-striped">
+            <thead>
+              <tr><th>#</th><th>name</th></tr>
+            </thead>
+            <tbody>
+              <tr v-if="parent_tree_node">
+                <td>..</td>
+                <td>
+                  <span v-bind:class="current_node.icon"></span>
+                  <a v-on:click="select_node(parent_tree_node)">{{parent_tree_node.text}}</a>
+                </td>
 
-
+              </tr>
+              <tr v-for="(node, index) in current_tree_node.nodes">
+                <td>{{index + 1}}</td>
+                <td>
+                  <span v-bind:class="node.icon"></span>
+                  <a v-on:click="select_node(node)">{{node.text}}</a>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </div>
     </div>
 
@@ -136,25 +149,13 @@
               </div>
             </div>
             <div class="form-group">
-              <label class="col-xs-2 control-label">description</label>
-              <div class="col-xs-10">
-                <textarea rows="2" class="form-control" v-model="target_node.description"></textarea>
-              </div>
-            </div>
-            <div class="form-group">
               <label class="col-xs-2 control-label">
                 icon
-                <a data-toggle="tooltip" title='"fa-desktop","fa-database", "fa-ethernet", "fa-hdd", "fa-laptop", "fa-mobile-alt", "fa-print", "fa-server", "fa-tablet-alt", "fa-tv", "fa-laptop-house", "fa-sim-card"'>tips</a>
+                <a data-toggle="tooltip" title='"fas fa-desktop","fas fa-database", "fas fa-ethernet", "fas fa-hdd", "fas fa-laptop", "fas fa-mobile-alt", "fas fa-print", "fas fa-server", "fas fa-tablet-alt", "fas fa-tv", "fas fa-laptop-house", "fas fa-sim-card", "glyphicon glyhicon-pring", "glyphicon glyphicon-camera"など'>tips</a>
               </label>
               <div class="col-xs-10 form-inline">
                 <input type="text" class="form-control" v-model="target_node.icon">
-                <span v-bind:class="'fas ' + target_node.icon"></span>
-              </div>
-            </div>
-            <div class="form-group">
-              <label class="col-xs-2 control-label">image_url</label>
-              <div class="col-xs-10">
-                <input type="text" class="form-control" v-model="target_node.image_url">
+                <span v-bind:class="target_node.icon"></span>
               </div>
             </div>
             <div class="form-group">
@@ -168,6 +169,24 @@
               <label class="col-xs-2 control-label">ipaddress</label>
               <div class="col-xs-10 form-inline">
                 <input type="text" class="form-control" v-model="target_node.ipaddress">
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="col-xs-2 control-label">macaddress</label>
+              <div class="col-xs-10 form-inline">
+                <input type="text" class="form-control" v-model="target_node.macaddress">
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="col-xs-2 control-label">image_url</label>
+              <div class="col-xs-10">
+                <input type="text" class="form-control" v-model="target_node.image_url">
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="col-xs-2 control-label">description</label>
+              <div class="col-xs-10">
+                <textarea rows="2" class="form-control" v-model="target_node.description"></textarea>
               </div>
             </div>
           </div>
@@ -201,25 +220,13 @@
               </div>
             </div>
             <div class="form-group">
-              <label class="col-xs-2 control-label">description</label>
-              <div class="col-xs-10">
-                <textarea rows="2" class="form-control" v-model="target_node.description"></textarea>
-              </div>
-            </div>
-            <div class="form-group">
               <label class="col-xs-2 control-label">
                 icon
-                <a data-toggle="tooltip" title='"fa-desktop","fa-database", "fa-ethernet", "fa-hdd", "fa-laptop", "fa-mobile-alt", "fa-print", "fa-server", "fa-tablet-alt", "fa-tv", "fa-laptop-house", "fa-sim-card"'>tips</a>
+                <a data-toggle="tooltip" title='"fas fa-desktop","fas fa-database", "fas fa-ethernet", "fas fa-hdd", "fas fa-laptop", "fas fa-mobile-alt", "fas fa-print", "fas fa-server", "fas fa-tablet-alt", "fas fa-tv", "fas fa-laptop-house", "fas fa-sim-card", "glyphicon glyhicon-pring", "glyphicon glyphicon-camera"など'>tips</a>
               </label>
               <div class="col-xs-10 form-inline">
                 <input type="text" class="form-control" v-model="target_node.icon">
                 <span v-bind:class="'fas ' + target_node.icon"></span>
-              </div>
-            </div>
-            <div class="form-group">
-              <label class="col-xs-2 control-label">image_url</label>
-              <div class="col-xs-10">
-                <input type="text" class="form-control" v-model="target_node.image_url">
               </div>
             </div>
             <div class="form-group">
@@ -233,6 +240,24 @@
               <label class="col-xs-2 control-label">ipaddress</label>
               <div class="col-xs-10 form-inline">
                 <input type="text" class="form-control" v-model="target_node.ipaddress">
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="col-xs-2 control-label">macaddress</label>
+              <div class="col-xs-10 form-inline">
+                <input type="text" class="form-control" v-model="target_node.macaddress">
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="col-xs-2 control-label">image_url</label>
+              <div class="col-xs-10">
+                <input type="text" class="form-control" v-model="target_node.image_url">
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="col-xs-2 control-label">description</label>
+              <div class="col-xs-10">
+                <textarea rows="2" class="form-control" v-model="target_node.description"></textarea>
               </div>
             </div>
           </div>
@@ -275,7 +300,7 @@
           <label>url</label> <input type="text" class="form-control" v-model="target_endpoint.url"><br>
         </div>
         <div class="modal-footer">
-          <button class="btn btn-default" v-on:click="append_endpoint">変更</button>
+          <button class="btn btn-default" v-on:click="append_endpoint">追加</button>
           <button class="btn btn-default" v-on:click="dialog_close('#append_endpoint_dialog')">キャンセル</button>
         </div>
       </span>
